// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-taqjlb e1gzovqr0"
  >
    <div
      data-testid="fake-head"
    >
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="Electronic Rubber Gloves"
        property="og:title"
      />
      <meta
        content="Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."
        property="og:description"
      />
      <meta
        content="Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."
        name="description"
      />
      <meta
        content="https://gigantic-tolerance.name"
        property="og:url"
      />
      <link
        href="https://gigantic-tolerance.name"
        rel="canonical"
      />
      <meta
        content="https://picsum.photos/seed/dkVOrEU/500/300"
        property="og:image"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
    </div>
    <script
      data-testid="fake-script"
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Event","startDate":"2022-01-26T23:13:31Z","endDate":"2022-05-12T01:36:13Z","duration":"P0Y3M15DT2H22M41S","keywords":"Concert","eventStatus":"SCHEDULED","location":"Basel","image":"https://picsum.photos/seed/dkVOrEU/500/300","name":"Electronic Rubber Gloves","description":"Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."}
    </script>
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1bei2my-Event e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
    <div
      class="css-b69x47 e1gzovqr1"
    >
      <div
        class="css-16750fk e1gzovqr2"
      >
        <div
          class="css-12bfk4x e1gzovqr3"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
          26.01.2022 23:13
        </div>
        <span>
          –
        </span>
         12.05.2022 01:36
      </div>
      <div
        class="css-16750fk e1gzovqr2"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"
          />
        </svg>
         Basel
      </div>
    </div>
    <div
      class="css-1nypbew eg8m6wp0"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
      >
        Electronic Rubber Gloves
      </h1>
    </div>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Libero a odit sequi quos.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Quo qui porro voluptas optio aut voluptates quis.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ex excepturi nihil nesciunt mollitia rerum repellat a.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Officiis ex asperiores ipsa possimus aperiam corrupti.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Blanditiis dignissimos quae temporibus ea expedita rerum.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Recusandae voluptatem quos nemo veniam libero.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Molestiae a nostrum ipsum officia saepe sunt voluptatum.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Eligendi cum rem explicabo.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ipsam ipsam unde inventore architecto voluptatum maxime.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Optio tenetur perferendis maiores accusantium accusamus hic similique ex itaque in nam.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Porro distinctio sint doloremque vero iure corporis ut vel veniam repellendus veritatis vitae optio at.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Minus id dignissimos similique aliquid ipsam accusantium.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Dolores commodi ratione iusto architecto maiores.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ipsam occaecati aut necessitatibus repudiandae iure at inventore ullam dolor.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Quidem corporis ducimus dolorem blanditiis dolor soluta autem.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Illo dolor mollitia labore eligendi asperiores itaque nulla voluptas beatae.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Magnam nemo ipsam molestias assumenda ex saepe voluptatem vel magni alias eum.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Doloremque porro odit vel perspiciatis quisquam beatae laboriosam magnam maiores ipsa ipsum error et sit.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Fugiat labore aliquam ipsam optio repellat molestias totam accusantium possimus.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Illum animi fuga qui accusantium quod eaque.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Veritatis quas facere similique voluptates fuga expedita.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Accusantium quisquam voluptatum fugiat.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Libero id quidem odit nihil.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Fugiat voluptate id maiores veniam atque totam fuga nisi.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Voluptatem corrupti sint magni illum odio a rerum fuga autem.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Event should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-taqjlb e1gzovqr0"
  >
    <div
      data-testid="fake-head"
    >
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="Electronic Rubber Gloves"
        property="og:title"
      />
      <meta
        content="Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."
        property="og:description"
      />
      <meta
        content="Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."
        name="description"
      />
      <meta
        content="https://gigantic-tolerance.name"
        property="og:url"
      />
      <link
        href="https://gigantic-tolerance.name"
        rel="canonical"
      />
      <meta
        content="https://picsum.photos/seed/dkVOrEU/500/300"
        property="og:image"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
    </div>
    <script
      data-testid="fake-script"
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Event","startDate":"2022-01-26T23:13:31Z","endDate":"2022-05-12T01:36:13Z","duration":"P0Y3M15DT2H22M41S","keywords":"Concert","eventStatus":"SCHEDULED","location":"Basel","image":"https://picsum.photos/seed/dkVOrEU/500/300","name":"Electronic Rubber Gloves","description":"Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."}
    </script>
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1bei2my-Event e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
    <div
      class="css-b69x47 e1gzovqr1"
    >
      <div
        class="css-16750fk e1gzovqr2"
      >
        <div
          class="css-12bfk4x e1gzovqr3"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
          26.01.2022 23:13
        </div>
        <span>
          –
        </span>
         12.05.2022 01:36
      </div>
      <div
        class="css-16750fk e1gzovqr2"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"
          />
        </svg>
         Basel
      </div>
    </div>
    <div
      class="css-1nypbew eg8m6wp0"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
      >
        Electronic Rubber Gloves
      </h1>
    </div>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Libero a odit sequi quos.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Quo qui porro voluptas optio aut voluptates quis.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ex excepturi nihil nesciunt mollitia rerum repellat a.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Officiis ex asperiores ipsa possimus aperiam corrupti.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Blanditiis dignissimos quae temporibus ea expedita rerum.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Recusandae voluptatem quos nemo veniam libero.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Molestiae a nostrum ipsum officia saepe sunt voluptatum.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Eligendi cum rem explicabo.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ipsam ipsam unde inventore architecto voluptatum maxime.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Optio tenetur perferendis maiores accusantium accusamus hic similique ex itaque in nam.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Porro distinctio sint doloremque vero iure corporis ut vel veniam repellendus veritatis vitae optio at.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Minus id dignissimos similique aliquid ipsam accusantium.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Dolores commodi ratione iusto architecto maiores.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ipsam occaecati aut necessitatibus repudiandae iure at inventore ullam dolor.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Quidem corporis ducimus dolorem blanditiis dolor soluta autem.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Illo dolor mollitia labore eligendi asperiores itaque nulla voluptas beatae.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Magnam nemo ipsam molestias assumenda ex saepe voluptatem vel magni alias eum.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Doloremque porro odit vel perspiciatis quisquam beatae laboriosam magnam maiores ipsa ipsum error et sit.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Fugiat labore aliquam ipsam optio repellat molestias totam accusantium possimus.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Illum animi fuga qui accusantium quod eaque.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Veritatis quas facere similique voluptates fuga expedita.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Accusantium quisquam voluptatum fugiat.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Libero id quidem odit nihil.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Fugiat voluptate id maiores veniam atque totam fuga nisi.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Voluptatem corrupti sint magni illum odio a rerum fuga autem.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Event should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-taqjlb e1gzovqr0"
  >
    <div
      data-testid="fake-head"
    >
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="Electronic Rubber Gloves"
        property="og:title"
      />
      <meta
        content="Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."
        property="og:description"
      />
      <meta
        content="Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."
        name="description"
      />
      <meta
        content="https://gigantic-tolerance.name"
        property="og:url"
      />
      <link
        href="https://gigantic-tolerance.name"
        rel="canonical"
      />
      <meta
        content="https://picsum.photos/seed/dkVOrEU/500/300"
        property="og:image"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
    </div>
    <script
      data-testid="fake-script"
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Event","startDate":"2022-01-26T23:13:31Z","endDate":"2022-05-12T01:36:13Z","duration":"P0Y3M15DT2H22M41S","keywords":"Concert","eventStatus":"SCHEDULED","location":"Basel","image":"https://picsum.photos/seed/dkVOrEU/500/300","name":"Electronic Rubber Gloves","description":"Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."}
    </script>
    <img
      alt="Dicta itaque nisi mollitia voluptate."
      class="css-1bei2my-Event e1nfkf2e0"
      height="500"
      loading="lazy"
      srcset="https://picsum.photos/seed/8xHsH/800/400 800w,
https://picsum.photos/seed/dkVOrEU/500/300 500w,
https://picsum.photos/seed/3ZbG2/300/200 300w,
https://picsum.photos/seed/FUAYxo2gyq/200/100 200w"
      title="aliquid deleniti quisquam"
      width="1000"
    />
    <div
      class="css-b69x47 e1gzovqr1"
    >
      <div
        class="css-16750fk e1gzovqr2"
      >
        <div
          class="css-12bfk4x e1gzovqr3"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
          26.01.2022 23:13
        </div>
        <span>
          –
        </span>
         12.05.2022 01:36
      </div>
      <div
        class="css-16750fk e1gzovqr2"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"
          />
        </svg>
         Basel
      </div>
    </div>
    <div
      class="css-1nypbew eg8m6wp0"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
      >
        Electronic Rubber Gloves
      </h1>
    </div>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Libero a odit sequi quos.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Quo qui porro voluptas optio aut voluptates quis.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ex excepturi nihil nesciunt mollitia rerum repellat a.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Officiis ex asperiores ipsa possimus aperiam corrupti.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Blanditiis dignissimos quae temporibus ea expedita rerum.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Recusandae voluptatem quos nemo veniam libero.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Molestiae a nostrum ipsum officia saepe sunt voluptatum.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Eligendi cum rem explicabo.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ipsam ipsam unde inventore architecto voluptatum maxime.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Optio tenetur perferendis maiores accusantium accusamus hic similique ex itaque in nam.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Porro distinctio sint doloremque vero iure corporis ut vel veniam repellendus veritatis vitae optio at.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Minus id dignissimos similique aliquid ipsam accusantium.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Dolores commodi ratione iusto architecto maiores.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ipsam occaecati aut necessitatibus repudiandae iure at inventore ullam dolor.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Quidem corporis ducimus dolorem blanditiis dolor soluta autem.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Illo dolor mollitia labore eligendi asperiores itaque nulla voluptas beatae.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Magnam nemo ipsam molestias assumenda ex saepe voluptatem vel magni alias eum.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Doloremque porro odit vel perspiciatis quisquam beatae laboriosam magnam maiores ipsa ipsum error et sit.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Fugiat labore aliquam ipsam optio repellat molestias totam accusantium possimus.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Illum animi fuga qui accusantium quod eaque.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Veritatis quas facere similique voluptates fuga expedita.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Accusantium quisquam voluptatum fugiat.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Libero id quidem odit nihil.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Fugiat voluptate id maiores veniam atque totam fuga nisi.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Voluptatem corrupti sint magni illum odio a rerum fuga autem.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Event should render WithError 1`] = `
<DocumentFragment>
  <article
    class="css-taqjlb e1gzovqr0"
  >
    <div
      class="css-1nypbew eg8m6wp0"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
      />
    </div>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      />
    </div>
  </article>
</DocumentFragment>
`;

exports[`Event should render WithLoading 1`] = `
<DocumentFragment>
  <article
    class="css-taqjlb e1gzovqr0"
  >
    <div
      class="css-1nypbew eg8m6wp0"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
      />
    </div>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      />
    </div>
  </article>
</DocumentFragment>
`;

exports[`Event should render WithoutImage 1`] = `
<DocumentFragment>
  <article
    class="css-taqjlb e1gzovqr0"
  >
    <div
      data-testid="fake-head"
    >
      <meta
        content="website"
        property="og:type"
      />
      <meta
        content="Electronic Rubber Gloves"
        property="og:title"
      />
      <meta
        content="Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."
        property="og:description"
      />
      <meta
        content="Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."
        name="description"
      />
      <meta
        content="https://gigantic-tolerance.name"
        property="og:url"
      />
      <link
        href="https://gigantic-tolerance.name"
        rel="canonical"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
    </div>
    <script
      data-testid="fake-script"
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Event","startDate":"2022-01-26T23:13:31Z","endDate":"2022-05-12T01:36:13Z","duration":"P0Y3M15DT2H22M41S","keywords":"Concert","eventStatus":"SCHEDULED","location":"Basel","name":"Electronic Rubber Gloves","description":"Libero a odit sequi quos.Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.Quo qui porro voluptas optio aut voluptates quis.Ex excepturi nihil nesciunt mollitia rerum repellat a.Officiis ex asperiores ipsa possimus aperiam corrupti.Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam."}
    </script>
    <div
      class="css-b69x47 e1gzovqr1"
    >
      <div
        class="css-16750fk e1gzovqr2"
      >
        <div
          class="css-12bfk4x e1gzovqr3"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
          26.01.2022 23:13
        </div>
        <span>
          –
        </span>
         12.05.2022 01:36
      </div>
      <div
        class="css-16750fk e1gzovqr2"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M15 11V5l-3-3-3 3v2H3v14h18V11h-6zm-8 8H5v-2h2v2zm0-4H5v-2h2v2zm0-4H5V9h2v2zm6 8h-2v-2h2v2zm0-4h-2v-2h2v2zm0-4h-2V9h2v2zm0-4h-2V5h2v2zm6 12h-2v-2h2v2zm0-4h-2v-2h2v2z"
          />
        </svg>
         Basel
      </div>
    </div>
    <div
      class="css-1nypbew eg8m6wp0"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
      >
        Electronic Rubber Gloves
      </h1>
    </div>
    <div
      class="css-0 e1e9qmuq0"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Libero a odit sequi quos.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Tempora sapiente voluptatibus suscipit est veniam numquam eius beatae.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Quo qui porro voluptas optio aut voluptates quis.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ex excepturi nihil nesciunt mollitia rerum repellat a.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Officiis ex asperiores ipsa possimus aperiam corrupti.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Similique voluptate consequatur debitis autem voluptatibus consequatur perspiciatis vel nemo nemo ad.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Natus at autem ipsum aut tempore commodi nemo dolor quod voluptatum porro quo rerum totam.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Blanditiis dignissimos quae temporibus ea expedita rerum.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Recusandae voluptatem quos nemo veniam libero.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Molestiae a nostrum ipsum officia saepe sunt voluptatum.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Eligendi cum rem explicabo.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ipsam ipsam unde inventore architecto voluptatum maxime.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Optio tenetur perferendis maiores accusantium accusamus hic similique ex itaque in nam.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Porro distinctio sint doloremque vero iure corporis ut vel veniam repellendus veritatis vitae optio at.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Minus id dignissimos similique aliquid ipsam accusantium.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Dolores commodi ratione iusto architecto maiores.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Ipsam occaecati aut necessitatibus repudiandae iure at inventore ullam dolor.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Quidem corporis ducimus dolorem blanditiis dolor soluta autem.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Illo dolor mollitia labore eligendi asperiores itaque nulla voluptas beatae.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Magnam nemo ipsam molestias assumenda ex saepe voluptatem vel magni alias eum.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Doloremque porro odit vel perspiciatis quisquam beatae laboriosam magnam maiores ipsa ipsum error et sit.
            </span>
          </span>
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Fugiat labore aliquam ipsam optio repellat molestias totam accusantium possimus.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Illum animi fuga qui accusantium quod eaque.
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Veritatis quas facere similique voluptates fuga expedita.
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Accusantium quisquam voluptatum fugiat.
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Libero id quidem odit nihil.
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Fugiat voluptate id maiores veniam atque totam fuga nisi.
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Voluptatem corrupti sint magni illum odio a rerum fuga autem.
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
